fix: fixed z-index

--- a/src/widgets/side-bar-menu/kiosk-management/kiosk-management.module.scss
+++ b/src/widgets/side-bar-menu/kiosk-management/kiosk-management.module.scss
@@ -18,7 +18,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 50;
+  z-index: 100;
   padding: var(--space-20);
 }
 
@@ -27,7 +27,7 @@
   width: 330px;
   height: 100%;
   background: #1b1b1b;
-  z-index: 100;
+  z-index: 110;
   display: flex;
   flex-direction: column;
   padding: var(--space-25) var(--space-15);
